@@ -127,13 +127,18 @@ public:
         , m_track(track)
         , m_padName(padName)
     {
-        if (track.type() == RealtimeMediaSource::Type::Audio)
+        const char* elementName = nullptr;
+        if (track.type() == RealtimeMediaSource::Type::Audio) {
             m_audioTrack = AudioTrackPrivateMediaStream::create(track);
-        else if (track.type() == RealtimeMediaSource::Type::Video)
+            elementName = "audiosrc";
+        } else if (track.type() == RealtimeMediaSource::Type::Video) {
             m_videoTrack = VideoTrackPrivateMediaStream::create(track);
+            elementName = "videosrc";
+        } else
+            ASSERT_NOT_REACHED();
 
         bool isCaptureTrack = track.isCaptureTrack();
-        m_src = makeGStreamerElement("appsrc", nullptr);
+        m_src = makeGStreamerElement("appsrc", elementName);
 
         g_object_set(m_src.get(), "is-live", TRUE, "format", GST_FORMAT_TIME, "emit-signals", TRUE, "min-percent", 100,
             "do-timestamp", isCaptureTrack, nullptr);
@@ -162,6 +167,7 @@ public:
         if (m_isObserving)
             return;
 
+        GST_DEBUG_OBJECT(m_src.get(), "Starting track/source observation");
         m_track.addObserver(*this);
         switch (m_track.type()) {
         case RealtimeMediaSource::Type::Audio:
@@ -181,6 +187,7 @@ public:
         if (!m_isObserving)
             return;
 
+        GST_DEBUG_OBJECT(m_src.get(), "Stopping track/source observation");
         m_isObserving = false;
         switch (m_track.type()) {
         case RealtimeMediaSource::Type::Audio:
